<resources>
    <string name="app_name">꽃부기</string>
    <string name="plant">식물</string>
    <string name="soil">토양</string>
    <string name="register">등록</string>
    <string name="save">저장</string>
    <string name="setting">설정</string>

    <string name="pot">화분</string>
    <string name="state">상태</string>
    <string name="watering">급수</string>

    <string name="of_kind">의 종류</string>
    <string name="of_image">의 사진</string>
    <string name="regi_pot_size">화분 사이즈</string>

    <string name="last_water_date">마지막으로 급수한 날짜</string>
    <string name="check_connect">서버에 등록된 기기목록</string>

    <string name="info">정보</string>

    <string name="block_title_humidity">토양 습도</string>
    <string name="block_title_waterlevel">물탱크</string>

    <string name="title_supply_prev">최근 급수 정보</string>
    <string name="title_supply_next">다음 급수 정보</string>
    <string name="title_user_watersize">사용자지정 물의 양</string>

    <string name="title_plant_kind">식물 종류</string>
    <string name="title_regi_date">등록한 날짜</string>
    <string name="title_pot_size">화분사이즈</string>
    <string name="title_soild_kind">토양 종류</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Scan_Stop</string>
    <string name="is_serial">Serial Present:</string>

</resources>