<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background2"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/main_plant_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/editbox_padding"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@drawable/main_background"
            android:orientation="vertical"
            android:padding="@dimen/side_padding">

            <androidx.cardview.widget.CardView
                android:id="@+id/view_watering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_padding"
                app:cardCornerRadius="@dimen/block_edge"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/block_inside_padding"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/block_inside_padding"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_opacity_24px"
                            app:tint="@color/colorAccent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/watering"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="@dimen/activity_title_font_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/info"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/activity_title_font_size"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_supply_prev"
                            android:textColor="@color/colorTitleFont"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_prev_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right|end"
                                android:text="2020-00-00"
                                android:textColor="@color/colorTitleFont"
                                android:textSize="@dimen/block_content_font_size" />

                            <TextView
                                android:id="@+id/txt_prev_vol"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right|end"
                                android:text="50ml"
                                android:textColor="@color/colorAccentDark"
                                android:textSize="@dimen/block_content_font_size"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_supply_next"
                            android:textColor="@color/colorTitleFont"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_next_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right|end"
                            android:text="2020-00-00"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/block_content_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_user_watersize"
                            android:textColor="@color/colorTitleFont"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_user_vol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right|end"
                            android:text="50ml"
                            android:textColor="@color/colorAccentDark"
                            android:textSize="@dimen/block_content_font_size"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_setting"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_title_font_size"
                android:background="@drawable/btn_vaild"
                android:gravity="center"
                android:text="공급 설정"
                android:textColor="@color/colorButtonFont"
                android:textSize="17sp"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:id="@+id/view_plantstate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_padding"
                app:cardCornerRadius="@dimen/block_edge"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/block_inside_padding"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/block_inside_padding"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_eco_24px"
                            app:tint="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/state"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/activity_title_font_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/activity_title_font_size"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/block_title_humidity"
                        android:textColor="@color/colorTitleFont"
                        android:textSize="@dimen/block_content_font_size"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/view_potplant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_padding"
                android:layout_marginBottom="@dimen/side_padding"
                android:clickable="true"
                app:cardCornerRadius="@dimen/block_edge"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/block_inside_padding"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/block_inside_padding"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/ic_spa_24px"
                            app:tint="@color/colorSolid" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pot"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/activity_title_font_size"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/activity_title_font_size"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:columnCount="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="식물 이름 "
                            android:textColor="@color/colorTitleFont"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_plant_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/block_content_font_size"
                            app:layout_gravity="right|end" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="등록한 날짜"
                            android:textColor="@color/colorTitleFont"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_regi_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/block_content_font_size"
                            app:layout_gravity="right|end" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="화분 사이즈"
                            android:textColor="@color/colorTitleFont"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_pot_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/block_content_font_size"
                            app:layout_gravity="right|end" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="토양의 종류"
                            android:textColor="@color/colorTitleFont"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_soil_kind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleFont"
                            android:textSize="@dimen/block_content_font_size"
                            app:layout_gravity="right|end" />

                    </androidx.gridlayout.widget.GridLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/block_title_padding"
                        android:text="이 곳을 클릭하시면 식물에 대한 정보를 보실 수 있습니다"
                        android:textColor="#AFAFAF"
                        android:textSize="12sp" />

                </LinearLayout>



            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </FrameLayout>

</ScrollView>

